# snowflake-query-processors

./: Makefile  README.md  pyproject.toml  setup.cfg
snowflake_ext/: extension.py  plugin.py
tests/: conftest.py  test_snowflake_extension.py
