[metadata]
name = localstack-snowflake-hello-world
version = 0.1.0
summary = LocalStack Snowflake "Hello World" Plugin
description = LocalStack Snowflake "Hello World" Plugin
author = ...

[options]
zip_safe = False
packages = find:
install_requires =
    localstack
    sqlglot

[options.entry_points]
localstack.extensions =
    snowflake-hello-world = snowflake_ext.extension:SnowflakeHelloWorld

[options.extras_require]

dev =
    black>=22.3.0
    flake8>=6.0.0
    isort>=5.12.0
    pyproject-flake8>=6.0.0

test=
    localstack-snapshot
    pytest
    pytest-httpserver
    rolo
    snowflake-connector-python
